# nbnet

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
.cargo/: config.toml
.github/workflows/: rust.yml
config/: custom.env  custom.env.minimal  minimal.env
config/deposit/samples/: deposits.json
config/genesis/example/: config.yaml  genesis.ssz
src/: common.rs  ddev.rs  dev.rs  main.rs
src/cfg/: hosts.format  mod.rs
src/ddev/: README.md  mod.rs
src/dev/: README.md  mod.rs
src/pos/: README.md  deposit.rs  exit.rs  mnemonic.rs  mod.rs
static/deposit/samples/: validators.json
static/genesis/: mainnet.env  minimal.env
static/genesis/example/: deposit_contract_block_hash.txt
tools/: Dockerfile  build_openssl_musl.sh  ddev_docker_runtime.sh  entrypoint.sh  fmt.sh  utils.sh
