[package]
name = "nb"
version = "0.2.1"
edition = "2021"
authors = ["hui.fan@mail.ru"]
build = "build.rs"
keywords = ["eth", "blockchain", "development"]
categories = ["development-tools::testing"]
license = "MIT"
homepage = "https://github.com/nbnet/nbnet"
repository = "https://github.com/nbnet/nbnet.git"

[dependencies]
clap = { version = "4.5", features = [ "cargo", "derive" ] }
clap_complete = "4.5"

serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

rayon = "1.10.0"
# parking_lot = "0.12"

# self-maintained crates
ruc = { version = "7.5", features = [ "http", "algo_rand" ] }

chaindev = "0.42.0"
vsdb = { version = "3.0", default-features = false }

[build-dependencies]
vergen = "9.0"

[dev-dependencies]

[features]
default = []

[patch.crates-io]
# ruc = { path = "../ruc" }
# vsdb = { path = "../vsdb/wrappers" }
# chaindev = { path = "../chaindev" }

[patch."https://github.com/rust-util-collections/chaindev"]
# chaindev = { path = "../chaindev" }

[profile.release]
# lto = "thin"
overflow-checks = true
