[package]
name = "nb"
version = "0.6.0"
edition = "2021"
authors = ["hui.fan@mail.ru"]
build = "build.rs"
keywords = ["eth", "blockchain", "development"]
categories = ["development-tools::testing"]
license = "MIT"
homepage = "https://github.com/nbnet/nbnet"
repository = "https://github.com/nbnet/nbnet.git"

[dependencies]
clap = { version = "4.5", features = [ "cargo", "derive" ] }
clap_complete = "4.5"

serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_yml = "0.0.12"

regex = "1.11.1"

bip39 = { package = "tiny-bip39", version = "2.0.0" }

alloy = { version = "0.7.0", features = [
    "network",
    "providers",
    "rpc",
    "rpc-types",
    "signers",
    "signer-local",
    "contract",
    "transports",
    "transport-http",
    "reqwest"
] }
sb = { package = "tokio", version = "1.41.0", features = [ "rt" ] }

# self-maintained crates
ruc = { version = "7.7.3", features = [ "http", "algo_rand" ] }

chaindev = "0.52.2"
vsdb = { version = "3.0", default-features = false }

[build-dependencies]
vergen = "9.0"

[dev-dependencies]

[features]
default = []

[patch.crates-io]
# ruc = { path = "../ruc" }
# vsdb = { path = "../vsdb/wrappers" }
# chaindev = { path = "../chaindev" }

[patch."https://github.com/rust-util-collections/chaindev"]
# chaindev = { path = "../chaindev" }

[profile.release]
overflow-checks = true
strip = true
# lto = "thin"
