[package]
name = "exp"
version = "0.6.0"
edition = "2021"
authors = ["fanhui@polyhedra.network", "galen@polyhedra.network", "frank@polyhedra.network"]
build = "build.rs"
keywords = ["eth", "blockchain", "development"]
categories = ["development-tools::testing"]
license = "MIT"
homepage = "https://github.com/PolyhedraZK/EXPchain"
repository = "https://github.com/PolyhedraZK/EXPchain.git"

[dependencies]
clap = { version = "4.5.23", features = [ "cargo", "derive" ] }
clap_complete = "4.5"

serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_yml = "0.0.12"

regex = "1.11.1"

bip39 = { package = "tiny-bip39", version = "2.0.0" }

alloy = { version = "0.7.3", features = [
    "network",
    "providers",
    "rpc",
    "rpc-types",
    "signers",
    "signer-local",
    "contract",
    "transports",
    "transport-http",
    "reqwest"
] }
sb = { package = "tokio", version = "1.41.0", features = [ "rt" ] }

# self-maintained crates
ruc = { version = "7.8.5", features = [ "http", "algo_rand" ] }

chaindev = "0.52.8"
vsdb = { version = "3.0", default-features = false }

[build-dependencies]
vergen = "9.0"

[dev-dependencies]

[features]
default = []

[patch.crates-io]
# ruc = { path = "../ruc" }
# vsdb = { path = "../vsdb/wrappers" }
# chaindev = { path = "../chaindev" }

[patch."https://github.com/rust-util-collections/chaindev"]
# chaindev = { path = "../chaindev" }

[profile.release]
overflow-checks = true
strip = true
# lto = "thin"
